--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
         "monolog/monolog": "^2.9",
         "laravel/framework": "*",
         "php-http/client-implementation": "*",
-        "php-http/httplug": "*"
+        "php-http/httplug": "*",
+        "php-http/message": "^1.16",
+        "php-http/message-factory": "^1.1",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10"
